--- a/style.css
+++ b/style.css
@@ -1,8 +1,12 @@
 /* Basic styling */
-body {
+html {
   font-family: "Roboto", Helvetica, Arial, sans-serif;
   background-color: rgb(0, 0, 0);
   color: rgb(255, 255, 255);
+  font-size: 10px;
+}
+
+body {
   margin: 0;
 }
 
@@ -10,15 +14,17 @@ header {
   position: fixed;
   right: 0;
   left: 0;
-  background: black;
+  background: rgb(16, 16, 16);
+  border-bottom: 0.5rem solid rgb(73, 73, 73);
 }
 
 nav {
   /* width: 100%; */
-  max-width: 71.25rem;
+  max-width: 100rem;
   /* height: 4.5rem; */
   /* padding: 1.25rem 2rem; */
   margin: 0 auto;
+  /* display: inline-block; */
 }
 
 nav ul {
@@ -32,22 +38,41 @@ nav ul li {
   display: inline-block;
 }
 
-.logo,
+.circle,
 nav ul li a {
-  padding: 10px 20px;
+  padding: 1rem 2rem;
   display: inline-block;
   color: white;
   text-decoration: none;
+  font-size: 2rem;
 }
 
-.logo {
-  font-weight: 900;
-  padding: 10px 50px;
+nav ul li a {
+  /* font-weight: 500; */
 }
 
-.logo:hover,
+.logo {  
+  font-size: 2.7rem;
+  font-weight: 500;
+  left: 0.3rem;
+  color: black;
+  text-decoration: none;
+  letter-spacing: -0.3rem;     
+  text-align: center;
+  position: relative;
+}
+
+.circle {
+  border-radius: 50%;
+  padding: 0;
+  margin: 0.5rem;
+  width: 3.3rem;
+  height: 3.3rem;  
+  background: #fff;
+}
+
 nav ul li a:hover {
-  background: #555;
+  color: rgb(204, 204, 204);
 }
 
 
@@ -59,15 +84,16 @@ nav ul li a:hover {
 
 /* Main content area */
 main {
-  padding: 0px;
+  padding: 0rem;
+  margin: 0;
 }
 
 section {
-  padding: 20px;
+  padding: 2rem;
 
   &.intro {
     color: black;
-    padding: 300px;
+    padding: 30rem;
     background: white right no-repeat url("image.png");
   }
 
@@ -76,7 +102,7 @@ section {
 /* Footer styling */
 footer {
   text-align: center;
-  padding: 20px;
+  padding: 2rem;
   background: #333;
   color: #ffffff;
 }
