--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* Basic styling */
+/* Basic */
 html {
   font-family: "Roboto", Helvetica, Arial, sans-serif;
   background-color: rgb(0, 0, 0);
@@ -10,94 +10,136 @@ body {
   margin: 0;
 }
 
+/* Header */
 header {
   position: fixed;
   right: 0;
   left: 0;
-  background: rgb(16, 16, 16);
-  border-bottom: 0.5rem solid rgb(73, 73, 73);
-}
+  background: black;
+  border-bottom: 0.3rem solid dimgray;
 
-nav {
-  /* width: 100%; */
-  max-width: 100rem;
-  /* height: 4.5rem; */
-  /* padding: 1.25rem 2rem; */
-  margin: 0 auto;
-  /* display: inline-block; */
-}
+  nav {
+    /* max-width: 150rem; */
+    margin: 0 auto;
+  }
 
-nav ul {
-  margin: 0;
-  float: right;
-  list-style: none;
-  overflow: hidden;
-}
+  nav ul {
+    margin: 0;
+    margin-right: 17rem;
+    float: right;
+    list-style: none;
+    overflow: hidden;
+  }
 
-nav ul li {
-  display: inline-block;
-}
+  nav ul li {
+    display: inline-block;
+  }
 
-.circle,
-nav ul li a {
-  padding: 1rem 2rem;
-  display: inline-block;
-  color: white;
-  text-decoration: none;
-  font-size: 2rem;
-}
+  nav ul li a {
+    padding: 1rem 2rem;
+    display: inline-block;
+    color: dimgray;
+    text-decoration: none;
+    font-size: 2rem;
+  }
 
-nav ul li a {
-  /* font-weight: 500; */
-}
+  nav ul li:nth-child(1) a {
+    color: white;
+  }
 
-.logo {  
-  font-size: 2.7rem;
-  font-weight: 500;
-  left: 0.3rem;
-  color: black;
-  text-decoration: none;
-  letter-spacing: -0.3rem;     
-  text-align: center;
-  position: relative;
-}
+  .circle {
+    border-radius: 50%;
+    padding: 0;
+    margin: 0.5rem;
+    margin-left: 20rem;
+    width: 3.3rem;
+    height: 3.3rem;
+    background: white;
+    display: inline-block;
+  }
 
-.circle {
-  border-radius: 50%;
-  padding: 0;
-  margin: 0.5rem;
-  width: 3.3rem;
-  height: 3.3rem;  
-  background: #fff;
-}
+  .logo {
+    font-size: 2.7rem;
+    font-weight: 500;
+    left: 0.3rem;
+    color: black;
+    text-decoration: none;
+    letter-spacing: -0.3rem;
+    text-align: center;
+    position: relative;
+  }
 
-nav ul li a:hover {
-  color: rgb(204, 204, 204);
-}
+  nav ul li a:hover {
+    color: white;
+  }
 
-
-
-/* nav ul li.name {
-  margin-left: 5%;
-  margin-right: 50%;
 }
 
 /* Main content area */
 main {
   padding: 0rem;
   margin: 0;
-}
 
-section {
-  padding: 2rem;
-
-  &.intro {
+  .intro {
     color: black;
-    padding: 30rem;
-    background: white right no-repeat url("image.png");
+    padding: 23rem 0;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    .headline {
+      margin-left: 20rem;
+
+      h1 {
+        font-size: 7.5rem;
+        font-weight: 600;
+        margin: 0;
+      }
+
+      p {
+        font-size: 1.5rem;
+        font-weight: 500;
+        margin: 0;
+      }
+    }
+
+    img {
+      /* float: right; */
+      width: 35rem;
+      margin-right: 18.5rem;
+    }
+
   }
 
+  .about_me {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    .heading {
+      h2 {
+        text-align: center;
+        font-size: 4rem;
+      }
+    }
+    .contents {
+      text-align: center;
+    }
+
+
+
+  }
+  
 }
+
+
+
+
+
+
+
+
 
 /* Footer styling */
 footer {
