--- a/style.css
+++ b/style.css
@@ -113,24 +113,58 @@ main {
   }
 
   .about_me {
-    display: flex;
+    /* display: flex; */
     align-items: center;
     justify-content: center;
 
     .heading {
+      display: block;
+
       h2 {
         text-align: center;
-        font-size: 4rem;
+        font-size: 7rem;
+        font-weight: 500;
       }
     }
+
     .contents {
+      flex-flow: row wrap;
+      justify-content: space-evenly;
+      display: flex;
       text-align: center;
+
+      .school {
+        img {
+          width: 10rem;
+        }
+        p {
+          /* margin: auto; */
+        }
+      }
+
+      .location {
+        img {
+          width: 10rem;
+        }
+        p {
+          /* margin: auto; */
+        }
+      }
+
+      .music {
+        img {
+          width: 10rem;
+        }
+        p {
+          /* margin: auto; */
+        }
+      }      
     }
 
 
 
   }
-  
+
 }
 
 
