--- a/style.css
+++ b/style.css
@@ -121,111 +121,59 @@ main {
   }
 
   .about_me {
-    /* display: flex; */
-    align-items: center;
-    justify-content: center;
-
+    margin-bottom: 20rem;
+    background-color: black;
     .heading {
       display: block;
-
+      margin-top: 15rem;
+      margin-bottom: 18rem;
       h2 {
         text-align: center;
         font-size: 7rem;
         font-weight: 500;
       }
     }
-
-    
-
     .contents {
-      --size-container: 12rem;
-      flex-flow: row wrap;
+      --size-container: 15rem;
       justify-content: space-between;
       display: flex;
       text-align: center;
       margin-left: 20rem;
       margin-right: 20rem;
-
-      /* div {
-        border: solid white 1rem;        
-        border-radius: 5%;
-        background-color: white;
-      } */
-
-      .container {        
+      .container {
         border-radius: 50%;
         width: var(--size-container);
         height: var(--size-container);
         border: solid white 0.2rem;
-        background-color: black;
         display: flex;
         justify-content: center;
         align-items: center;
-        position: relative;
-        z-index: 1;
         overflow: hidden;
+        background-color: white;
       }
-
       p {
-        font-size: 1rem;
+        font-size: 1.5rem;
+      }
+      .school img {
+        width: calc(var(--size-container) + 0.5rem);
       }
 
-      .school {
-
-        img {
-          width: calc(var(--size-container) + 0.5rem);;
-        }
-
-        p {
-          /* margin: auto; */
-        }
+      .location img {
+        width: calc(var(--size-container) + 3rem);
       }
-
-      .location {
-        .container {
-          background-color: white;
-        }
-
-        img {
-          position: absolute;
-          width: 19rem;
-        }
-
-        p {
-          /* margin: auto; */
-        }
+      .music img {
+        width: var(--size-container);
       }
-
-      .music {
-        img {
-          width: var(--size-container);
-        }
-
-        p {
-          /* margin: auto; */
-        }
+      .birthday img {
+        width: calc(var(--size-container) - 5rem);
       }
-
-      .birthday {
-        .container {
-          background-color: white;
-        }
-        i {
-          font-size: 9rem;
-          color: red;
-        }
-
-        p {
-          /* margin: auto; */
-        }
-      }
-
-
     }
-
-
-
   }
+
+  .skills {
+    background-color: rgb(22, 22, 23);
+  }
+
 
 }
 
