--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ body {
   margin: 0;
 }
 
+img {
+  object-fit: contain
+}
+
 /* Header */
 header {
   position: fixed;
@@ -123,16 +127,19 @@ main {
   .about_me {
     margin-bottom: 20rem;
     background-color: black;
+
     .heading {
       display: block;
       margin-top: 15rem;
       margin-bottom: 18rem;
+
       h2 {
         text-align: center;
         font-size: 7rem;
         font-weight: 500;
       }
     }
+
     .contents {
       --size-container: 15rem;
       justify-content: space-between;
@@ -140,6 +147,7 @@ main {
       text-align: center;
       margin-left: 20rem;
       margin-right: 20rem;
+
       .container {
         border-radius: 50%;
         width: var(--size-container);
@@ -151,9 +159,11 @@ main {
         overflow: hidden;
         background-color: white;
       }
+
       p {
         font-size: 1.5rem;
       }
+
       .school img {
         width: calc(var(--size-container) + 0.5rem);
       }
@@ -161,21 +171,164 @@ main {
       .location img {
         width: calc(var(--size-container) + 3rem);
       }
+
       .music img {
         width: var(--size-container);
       }
+
       .birthday img {
         width: calc(var(--size-container) - 5rem);
       }
     }
   }
 
+  /* .skills {
+    margin-bottom: 20rem;
+    background-color: black;
+
+    .heading {
+      display: block;
+      margin-top: 15rem;
+      margin-bottom: 18rem;
+
+      h2 {
+        color: white;
+        text-align: center;
+        font-size: 7rem;
+        font-weight: 500;
+      }
+    }
+
+    .contents {
+      justify-content: space-between;
+      display: flex;
+      margin-left: 20rem;
+      margin-right: 20rem;
+      text-align: center;
+      align-items: center;
+      background-color: black;
+
+      div {
+        border-radius: 10%;
+        width: 40rem;
+        height: 30rem;
+        background-color: white;
+
+        p {
+          margin: 2rem;
+        }
+      }
+
+      .front_end {
+        border: solid black 1rem;
+
+        p {
+          color: black;
+          font-size: 3rem;
+        }
+
+        .front_end_images {
+          display: flex;
+          justify-content: space-between;
+
+          img {
+            width: 10rem;
+          }
+        }
+      }
+
+      .back_end {
+        border: solid black 1rem;
+
+        p {
+          color: black;
+          font-size: 3rem;
+        }
+
+        .back_end_images {
+          display: flex;
+          justify-content: space-between;
+
+          img {
+            width: 10rem;
+
+          }
+        }
+      }
+
+      .others {
+        border: solid black 1rem;
+
+        p {
+          color: black;
+          font-size: 3rem;
+        }
+
+        .others_images {
+          display: flex;
+          justify-content: space-between;
+
+          img {
+            width: 10rem;
+          }
+        }
+      }
+    }
+  } */
+
   .skills {
+    margin-top: 20rem;
+    margin-bottom: 20rem;
     background-color: rgb(22, 22, 23);
-    background-color: white;
+
+    .heading {
+      display: block;
+      margin-top: 15rem;
+
+      h2 {
+        color: white;
+        text-align: center;
+        font-size: 7rem;
+        font-weight: 500;
+      }
+    }
+
+    .contents {
+      gap: 1.6rem;
+      flex-wrap: wrap;
+      justify-content: center;
+      display: flex;
+      margin: 0;
+      padding: 0;
+
+      div {
+        width: 9.6rem;
+        height: 9.6rem;
+        padding: 1.6rem 2.4rem;
+        border-radius: 1.6rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: rgb(22, 22, 23);
+        background-color: black;
+
+        span {
+            font-size: 1.2rem;
+            margin-top: 0.8rem;
+            padding: 0;
+            box-sizing: border-box;
+            list-style: none;
+            text-decoration: none;
+            color: whtie;
+        }
+
+        img {
+          width: 7rem;
+        }
+      }
+    }
   }
-
-
 }
 
 
@@ -184,12 +337,10 @@ main {
 
 
 
-
-
-/* Footer styling */
-footer {
-  text-align: center;
-  padding: 2rem;
-  background: #333;
-  color: #ffffff;
-}
+  /* Footer styling */
+  footer {
+    text-align: center;
+    padding: 2rem;
+    background: #333;
+    color: #ffffff;
+  }
