--- a/style.css
+++ b/style.css
@@ -89,16 +89,18 @@ header {
 
 /* Main content area */
 main {
-  padding: 0rem;
+  padding: 0;
   margin: 0;
 
   .intro {
+    height: 95.3rem;
+    margin: 0;
     color: black;
-    padding: 23rem 0;
     background-color: white;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    box-sizing: border-box;
 
     .headline {
       margin-left: 20rem;
@@ -121,17 +123,17 @@ main {
       width: 35rem;
       margin-right: 21.5rem;
     }
-
   }
 
   .about_me {
-    margin-bottom: 20rem;
+    margin: 0;
     background-color: black;
+    padding-top: 10rem;
+    padding-bottom: 10rem;
 
     .heading {
       display: block;
-      margin-top: 15rem;
-      margin-bottom: 18rem;
+      padding-bottom: 18rem;
 
       h2 {
         text-align: center;
@@ -160,7 +162,7 @@ main {
         background-color: white;
       }
 
-      p {
+      span {
         font-size: 1.5rem;
       }
 
@@ -182,108 +184,15 @@ main {
     }
   }
 
-  /* .skills {
-    margin-bottom: 20rem;
-    background-color: black;
-
-    .heading {
-      display: block;
-      margin-top: 15rem;
-      margin-bottom: 18rem;
-
-      h2 {
-        color: white;
-        text-align: center;
-        font-size: 7rem;
-        font-weight: 500;
-      }
-    }
-
-    .contents {
-      justify-content: space-between;
-      display: flex;
-      margin-left: 20rem;
-      margin-right: 20rem;
-      text-align: center;
-      align-items: center;
-      background-color: black;
-
-      div {
-        border-radius: 10%;
-        width: 40rem;
-        height: 30rem;
-        background-color: white;
-
-        p {
-          margin: 2rem;
-        }
-      }
-
-      .front_end {
-        border: solid black 1rem;
-
-        p {
-          color: black;
-          font-size: 3rem;
-        }
-
-        .front_end_images {
-          display: flex;
-          justify-content: space-between;
-
-          img {
-            width: 10rem;
-          }
-        }
-      }
-
-      .back_end {
-        border: solid black 1rem;
-
-        p {
-          color: black;
-          font-size: 3rem;
-        }
-
-        .back_end_images {
-          display: flex;
-          justify-content: space-between;
-
-          img {
-            width: 10rem;
-
-          }
-        }
-      }
-
-      .others {
-        border: solid black 1rem;
-
-        p {
-          color: black;
-          font-size: 3rem;
-        }
-
-        .others_images {
-          display: flex;
-          justify-content: space-between;
-
-          img {
-            width: 10rem;
-          }
-        }
-      }
-    }
-  } */
-
   .skills {
-    margin-top: 20rem;
-    margin-bottom: 20rem;
-    background-color: rgb(22, 22, 23);
+    margin: 0;
+    background-color: black;
+    padding-top: 10rem;
+    padding-bottom: 10rem;
 
     .heading {
       display: block;
-      margin-top: 15rem;
+      padding-bottom: 18rem;
 
       h2 {
         color: white;
@@ -294,40 +203,61 @@ main {
     }
 
     .contents {
-      gap: 1.6rem;
+      gap: 1rem;
       flex-wrap: wrap;
-      justify-content: center;
+      justify-content: space-between;
       display: flex;
       margin: 0;
       padding: 0;
+      margin-left: 20rem;
+      margin-right: 20rem;
 
       div {
-        width: 9.6rem;
-        height: 9.6rem;
-        padding: 1.6rem 2.4rem;
-        border-radius: 1.6rem;
+        width: 10rem;
+        height: 12rem;
+        padding: 1.5rem 2rem;
+        border-radius: 1.2rem;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         background-color: rgb(22, 22, 23);
-        background-color: black;
+
+        &:hover {
+          background-color: dimgrey;
+        }
 
         span {
-            font-size: 1.2rem;
-            margin-top: 0.8rem;
-            padding: 0;
-            box-sizing: border-box;
-            list-style: none;
-            text-decoration: none;
-            color: whtie;
+          font-size: 1.2rem;
+          margin-top: 1rem;
+          padding: 0;
+          box-sizing: border-box;
+          list-style: none;
+          text-decoration: none;
+          color: white;
         }
 
         img {
           width: 7rem;
+          height: 7rem;
         }
       }
     }
+  }
+
+  .education {
+    margin: 0;
+    background-color: black;
+    padding-top: 10rem;
+    padding-bottom: 10rem;
+
+    h2 {
+      color: white;
+      text-align: center;
+      font-size: 7rem;
+      font-weight: 500;
+    }
+
   }
 }
 
@@ -337,10 +267,10 @@ main {
 
 
 
-  /* Footer styling */
-  footer {
-    text-align: center;
-    padding: 2rem;
-    background: #333;
-    color: #ffffff;
-  }
+/* Footer styling */
+footer {
+  text-align: center;
+  padding: 2rem;
+  background: #333;
+  color: #ffffff;
+}
