--- a/style.css
+++ b/style.css
@@ -60,6 +60,8 @@ header {
   }
 
   .circle {
+    display: flex;
+    flex-shrink: 0;
     border-radius: 50%;
     padding: 0;
     margin: 0.5rem;
@@ -160,6 +162,7 @@ main {
         align-items: center;
         overflow: hidden;
         background-color: white;
+        flex-shrink: 0;
       }
 
       span {
@@ -251,16 +254,121 @@ main {
     padding-top: 10rem;
     padding-bottom: 10rem;
 
-    h2 {
-      color: white;
-      text-align: center;
-      font-size: 7rem;
-      font-weight: 500;
+    .heading {
+      display: block;
+      padding-bottom: 10rem;
+
+      h2 {
+        color: white;
+        text-align: center;
+        font-size: 7rem;
+        font-weight: 500;
+      }
     }
 
+    .contents {
+      .school {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        margin: 0;
+        padding: 0;
+        margin-left: 20rem;
+        margin-right: 20rem;
+
+        .container {
+          background-color: white;
+          border-radius: 50%;
+          width: 25rem;
+          height: 25rem;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          overflow: hidden;
+          margin: 0;
+          flex-shrink: 0;
+
+          /* margin-left: 15rem; */
+          img {
+            width: 23rem;
+            height: 23rem;
+          }
+        }
+
+        .explanation {
+          text-align: center;
+          span.degree {
+            font-size: 3rem;
+            font-weight: 500;
+          }
+
+          span.additional_explanation {
+            font-size: 2rem;
+          }
+        }
+      }
+    }
+  }
+
+  .experience {
+    margin: 0;
+    background-color: black;
+    padding-top: 10rem;
+    padding-bottom: 10rem;
+
+    .heading {
+      display: block;
+      padding-bottom: 10rem;
+
+      h2 {
+        color: white;
+        text-align: center;
+        font-size: 7rem;
+        font-weight: 500;
+      }
+    }
+
+    .contents {
+      display: flex;
+      flex-flow: row nowrap;
+      justify-content: center;
+      margin: 0;
+      padding: 0;
+      margin-left: 20rem;
+      margin-right: 20rem;
+
+      .company {
+        padding-right: 3rem;
+        border-right: 1px solid white;
+        justify-content: center;
+        display: flex;
+
+        .container {
+          background-color: white;
+          border-radius: 50%;
+          width: 25rem;
+          height: 25rem;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          overflow: hidden;
+          flex-flow: column nowrap;
+          flex-shrink: 0;
+
+          /* margin-left: 15rem; */
+          img {
+            width: 10rem;
+            height: 10rem;
+          }
+
+          span {
+            text-align: center;
+          }
+        }
+      }
+    }
   }
 }
-
 
 
 
