--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ html {
   color: white;
   font-size: 10px;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -49,10 +50,9 @@ header {
     font-size: 2rem;
     text-align: center;
     white-space: nowrap;
-  }
+    cursor: pointer;
 
-  nav ul li:nth-child(1) a {
-    color: white;
+    transition: background-color 0.3s ease, color 0.3s ease;
   }
 
   nav ul li:first-child a {
@@ -73,6 +73,7 @@ header {
     height: 3.3rem;
     background: white;
     display: inline-block;
+    cursor: pointer;
   }
 
   .logo {
@@ -86,11 +87,14 @@ header {
     position: relative;
   }
 
-  nav ul li a:hover {
+  .active {
     color: white;
   }
 
+ 
 }
+
+
 
 /* Main content area */
 main {
@@ -135,7 +139,7 @@ main {
   .about_me {
     margin: 0;
     background-color: black;
-    padding-top: 10rem;
+    padding-top: 15rem;
     padding-bottom: 10rem;
 
     .heading {
@@ -196,12 +200,12 @@ main {
   .skills {
     margin: 0;
     background-color: black;
-    padding-top: 10rem;
+    padding-top: 15rem;
     padding-bottom: 10rem;
 
     .heading {
       display: block;
-      padding-bottom: 18rem;
+      padding-bottom: 20rem;
 
       h2 {
         color: white;
@@ -212,9 +216,9 @@ main {
     }
 
     .contents {
-      gap: 1rem;
+      gap: 3rem;
       flex-wrap: wrap;
-      justify-content: space-between;
+      justify-content: center;
       display: flex;
       margin: 0;
       padding: 0;
@@ -257,7 +261,7 @@ main {
   .education {
     margin: 0;
     background-color: black;
-    padding-top: 10rem;
+    padding-top: 15rem;
     padding-bottom: 10rem;
 
     .heading {
@@ -294,7 +298,6 @@ main {
           margin: 0;
           flex-shrink: 0;
 
-          /* margin-left: 15rem; */
           img {
             width: 23rem;
             height: 23rem;
@@ -321,8 +324,11 @@ main {
   .experience {
     margin: 0;
     background-color: black;
-    padding-top: 10rem;
+    padding-top: 15rem;
     padding-bottom: 10rem;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
 
     .heading {
       display: block;
@@ -351,7 +357,7 @@ main {
         display: flex;
         flex-flow: row nowrap;
         margin: 0;
-        margin-left: 25rem;
+        margin-left: 13%;
 
         .container {
           margin-top: 5rem;
@@ -367,7 +373,6 @@ main {
           flex-flow: column nowrap;
           flex-shrink: 0;
 
-          /* margin-left: 15rem; */
           .army {
             width: 15rem;
             height: 15rem;
@@ -423,7 +428,7 @@ main {
 /* Footer styling */
 footer {
   text-align: center;
-  padding: 2rem;
+  padding-bottom: 0.5rem;
   background: rgb(22, 22, 23);
   color: white;
 
@@ -431,16 +436,19 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-bottom: 0rem;
 
     i {
       font-size: 4rem;
       padding: 2rem;
+      padding-bottom: 0.5rem;
       color: white;
     }
 
     img {
       height: 4rem;
       padding: 1.5rem;
+      padding-bottom: 0rem;
     }
   }
 
